忽略指定文件

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 Homestead.json
 Homestead.yaml
 .env
+
+/storage/logs/*
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
+.env
