--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-debugbar": "^2.3",
-        "arcanedev/log-viewer": "4.1.0"
+        "arcanedev/log-viewer": "4.1.0",
+        "maatwebsite/excel": "~2.0.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -23,7 +24,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+		"files": [
+			"app/Helpers/functions.php"
+		]
     },
     "autoload-dev": {
         "classmap": [
